--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "install": "^0.13.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-preset-env": "^8.0.1",
@@ -48,6 +49,9 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-serve": "^2.0.2",
     "sass": "^1.59.3",
+    "stylelint": "^15.3.0",
+    "stylelint-config-standard": "^31.0.0",
+    "stylelint-scss": "^4.5.0",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5",
     "typescript-plugin-css-modules": "^4.2.3"
